<resources>
    <string name="app_name">Media sharing helper</string>
    <string name="label_text">Ready to share</string>
    <string name="label_image">@string/label_text</string>
    <string name="share">Share</string>
    <string name="share_x">Share %s</string>
    <string name="shared_x">%s to share</string>
    <string name="and">" and "</string>
    <string name="text">Text</string>
    <string name="delete_text">Delete text</string>
    <string name="text_empty_message">Select \"%s\" from the share selection screen of other apps.</string>
    <string name="image">Image</string>
    <string name="delete_image">Delete image</string>
    <string name="image_empty_message">Select \"%s\" from the share selection screen of other apps\n\nor click to select an image.\n\n*Image trimming and editing are not supported.</string>
    <string name="suffix">Specify boilerplate</string>
    <string name="suffix_help">Example: #NowPlaying</string>
    <string name="artist">Specify artist name</string>
    <string name="image_picker">Choose image</string>
    <string name="text_raw">leave unprocessed</string>
    <string name="dark_mode">Dark mode</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="use_battery_saver_setting">Use battery saver settings</string>
    <string name="use_device_setting">Use device settings</string>
    <string name="action_light_mode">Light mode</string>
    <string name="action_dark_mode">@string/dark_mode</string>
    <string name="action_auto_mode">Auto</string>
    <string name="action_option">Option</string>
    <string name="action_oss">Open Source Software</string>
    <string name="history">History</string>
</resources>